<resources>
    <string name="app_name">Mingle</string>

    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>

    //Sign in
    <string name="sign_in_greeting">Welcome back!</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_text">- Or sign in with - </string>
    <string name="sign_in_text_sign_up">Dont have an account? </string>

    //Sign up
    <string name="sign_up_greeting">Create your account</string>
    <string name="sign_up_button">Sign up</string>
    <string name="sign_up_text">- Or sign un with - </string>
    <string name="sign_up_text_sign_ip">Already have an account?</string>

    //Menu
    <string name="menu_user_profile">Profile</string>
    <string name="menu_search">Search</string>
    <string name="menu_messages">Messages</string>

    //Your profile
    <string name="your_profile_tiitle">Your profile</string>
    <string name="your_profilr_edit">Edit Profile</string>
    <string name="your_profile_log_out">Log Out</string>

    //Edit profile
    <string name="edit_profile_title">Edit profile</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile_cancel">Cancel</string>
    <string name="edit_profile_save">Save</string>


</resources>