<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog_background"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="24sp"
        android:fontFamily="@font/title"
        android:textColor="@color/dark_purple"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/currentPasswordInput"
        style="@style/InputStyle"
        android:layout_margin="10dp"
        android:hint="Current Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/newPasswordInput"
        style="@style/InputStyle"
        android:layout_margin="10dp"
        android:hint="Confirm New Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPasswordInput"
        style="@style/InputStyle"
        android:layout_margin="10dp"
        android:hint="Current Password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            style="@style/EditButton"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/cancel_button"
            android:text="@string/edit_profile_cancel" />

        <Button
            android:id="@+id/saveButton"
            style="@style/EditButton"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/sign_in_button"
            android:text="@string/edit_profile_save" />
    </LinearLayout>

</LinearLayout>